--- a/pomodoro_app/pubspec.yaml
+++ b/pomodoro_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
   flutter_launcher_icons: ^0.13.1
+  flutter_local_notifications: ^15.1.0+1
 
 dev_dependencies:
   flutter_test:
