--- a/pomodoro_app/pubspec.yaml
+++ b/pomodoro_app/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl: ^0.18.1
-  flutter_local_notifications: ^15.1.0+1
+  audioplayers: ^5.0.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
@@ -64,6 +64,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
+    - assets/sons/alarme.mp3
     - assets/images/logo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
