--- a/pomodoro_app/pubspec.yaml
+++ b/pomodoro_app/pubspec.yaml
@@ -30,12 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  intl: ^0.18.1
+  intl: ^0.18.0
   audioplayers: ^5.0.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
@@ -66,6 +69,7 @@ flutter:
   assets:
     - assets/sons/alarme.mp3
     - assets/images/logo.png
+    - assets/lang/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -99,3 +103,5 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/images/tomato.png"
+
+localization_dir: assets/lang
