--- a/pomodoro_app/pubspec.yaml
+++ b/pomodoro_app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.0
   audioplayers: ^5.0.0
   get: ^4.6.5
+  flutter_slidable: ^0.6.0
 
 dev_dependencies:
   flutter_launcher_icons: "^0.13.1"
